@@ -1,5 +1,5 @@
 .IX Title "UCK-GUI 1"
-.TH UCK-GUI 1 "2008-02-04" "2.3.1" ""
+.TH UCK-GUI 1 "2008-02-04" "2.3.2" ""
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
